--- a/public/styles.css
+++ b/public/styles.css
@@ -9,10 +9,7 @@
   body {
     background: #eee;
     padding: 0 16px;
-    /* background-color: #ffffff;
-     */
      background-color: #CAF0F8;
-    /* background-image: url("https://www.transparenttextures.com/patterns/cubes.png"); */
   }
   
   header {
@@ -67,7 +64,7 @@
     position: relative;
     float: right;
     margin-right: 10px;
-    color: #f5ba13;
+    color: #90E0EF;
     border: none;
     width: 36px;
     height: 36px;
@@ -98,8 +95,8 @@
     position: absolute;
     right: 18px;
     bottom: -18px;
-    background: #f5ba13;
-    color: #fff;
+    background: #90E0EF;
+    color: #a8e2ec;
     border: none;
     border-radius: 50%;
     width: 36px;
