--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@
     right: 18px;
     bottom: -18px;
     background: #90E0EF;
-    color: #a8e2ec;
+    color: #fff;
     border: none;
     border-radius: 50%;
     width: 36px;
